# SandBox

./: CMakeLists.txt  Dockerfile  Makefile
Media/: CMakeLists.txt  CMakeLists.txt.orig
Media/Chrono/: Timestamp.cpp  Timestamp.h
Media/IO/: ByteArrayStream.cpp  ByteArrayStream.h  FileStream.cpp  FileStream.h  IBufferedObjectInputStream.h  IInputStream.h  IObjectInputStream.h  IOutputStream.h  ISeekable.h  IStream.h  StreamTypes.h
Media/Protocol/QADP/: QADPAudioFrame.cpp  QADPAudioFrame.h  QADPAuxiliaryDataFrame.cpp  QADPAuxiliaryDataFrame.h  QADPFrame.cpp  QADPFrame.h  QADPFrameAudioDataHeader.h  QADPFrameAuxiliaryDataHeader.h  QADPFrameCommonHeader.h  QADPFrameFlags.h  QADPFrameSerializer.cpp  QADPFrameSerializer.h  QADPFrameTextDataHeader.h  QADPFrameType.h  QADPFrameVideoDataHeader.h  QADPFrames.h  QADPTextFrame.cpp  QADPTextFrame.h  QADPVideoFrame.cpp  QADPVideoFrame.h
Media/Protocol/QADP/Metadata/: QADPAudioConfigurationMetadataPacket.cpp  QADPAudioConfigurationMetadataPacket.h  QADPDriveSerialNumberMetadataPacket.cpp  QADPDriveSerialNumberMetadataPacket.h  QADPImageAspectRatioMetadataPacket.cpp  QADPImageAspectRatioMetadataPacket.h  QADPImageEnhancementsMetadataPacket.cpp  QADPImageEnhancementsMetadataPacket.h  QADPImageTransformsMetadataPacket.cpp  QADPImageTransformsMetadataPacket.h  QADPLensConfigurationMetadataPacket.cpp  QADPLensConfigurationMetadataPacket.h  QADPMetadataPacket.cpp  QADPMetadataPacket.h  QADPMetadataPacketHeader.h  QADPMetadataPacketType.h  QADPMetadataPackets.h  QADPPrivacyPatchLocation.h  QADPPrivacyPatchMetadataPacket.h  QADPPrivacyPatchType.h  QADPSeprobanMetadataPacket.cpp  QADPSeprobanMetadataPacket.h  QADPStreamChannelBusyStatus.h  QADPStreamChannelImageSlicingType.h  QADPStreamChannelStatusMetadataPacket.cpp  QADPStreamChannelStatusMetadataPacket.h
Media/Protocol/QADP/Services/: QADPFrameParser.cpp  QADPFrameParser.h
MediaWrapper/: CMakeLists.txt  MediaWrapper.h
MediaWrapper/include/: audioresampler.h  av.h  averror.h  avlog.h  avtime.h  avutils.h  channellayout.h  codec.h  codeccontext.h  dictionary.h  ffmpeg.h  format.h  formatcontext.h  frame.h  packet.h  pixelformat.h  rational.h  sampleformat.h  stream.h  timestamp.h  videorescaler.h
MediaWrapper/src/: Averror.cpp  audioresampler.cpp  avtime.cpp  avutils.cpp  channellayout.cpp  codec.cpp  codeccontext.cpp  dictionary.cpp  format.cpp  formatcontext.cpp  frame.cpp  packet.cpp  rational.cpp  sampleformat.cpp  stream.cpp  timestamp.cpp  videorescaler.cpp
src/: SandBox.cpp  orchidea.c  webrtcReader.cpp
